Adicionando banco em memoria h2 para os testes e os primeiros testes do repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.open-in-view=false
+#spring.jpa.open-in-view=false
