--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,4 +4,4 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
 
-#spring.jpa.open-in-view=false
+spring.jpa.open-in-view=false
